manifest/ingress/ingress-test-apps.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod-1
  labels:
    app: sample-pod-1-label
spec:
  containers:
    - name: nginx-container
      image: amsy810/echo-nginx:v2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod-2
  labels:
    app: sample-pod-2-label
spec:
  containers:
    - name: nginx-container
      image: amsy810/echo-nginx:v2.0
---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-svc-1
spec:
  type: NodePort
  ports:
    - name: http-port
      protocol: TCP
      port: 8888
      targetPort: 80
  selector:
    app: sample-pod-1-label
---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-svc-2
spec:
  type: NodePort
  ports:
    - name: http-port
      protocol: TCP
      port: 8888
      targetPort: 80
  selector:
    app: sample-pod-2-label
